perf: Update `photo-mel` image to WebP format in `index.html`.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="image-col">
                 <div> <!-- Wrapper for image -->
                     <div class="bancale-frame">
-                        <img src="assets/img/photo-mel.png" alt="Mélanie, fondatrice de Carpe Lucem">
+                        <img src="assets/img/photo-mel.webp" alt="Mélanie, fondatrice de Carpe Lucem">
                     </div>
                 </div>
             </div>
